vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

        public static IntValuedEnum<libvlc_audio_output_device_types_t > fromValue(int value) {
            return FlagSet.fromValue(value, values());
        }
    };
    /** enum values */
    public enum libvlc_audio_output_channel_t implements IntValuedEnum<libvlc_audio_output_channel_t > {
        libvlc_AudioChannel_Error(-1),
        libvlc_AudioChannel_Stereo(1),
        libvlc_AudioChannel_RStereo(2),
        libvlc_AudioChannel_Left(3),
        libvlc_AudioChannel_Right(4),
        libvlc_AudioChannel_Dolbys(5);
        libvlc_audio_output_channel_t(long value) {
            this.value = value;
        }
        public final long value;
        public long value() {
            return this.value;
        }
        public Iterator<libvlc_audio_output_channel_t > iterator() {
            return Collections.singleton(this).iterator();
        }
        public static IntValuedEnum<libvlc_audio_output_channel_t > fromValue(int value) {
            return FlagSet.fromValue(value, values());
        }
    };
    /** enum values */
    public enum libvlc_playback_mode_t implements IntValuedEnum<libvlc_playback_mode_t > {
        libvlc_playback_mode_default(0),
        libvlc_playback_mode_loop(1),
        libvlc_playback_mode_repeat(2);
        libvlc_playback_mode_t(long value) {
            this.value = value;
        }
        public final long value;
        public long value() {
            return this.value;
        }
        public Iterator<libvlc_playback_mode_t > iterator() {
            return Collections.singleton(this).iterator();
        }
        public static IntValuedEnum<libvlc_playback_mode_t > fromValue(int value) {
            return FlagSet.fromValue(value, values());
        }
    };
    public static final int LIBVLC_STRUCTURES_H = (int)1;
    public static final int VLC_LIBVLC_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_PLAYER_H = (int)1;
    public static final int LIBVLC_MEDIA_LIST_H = (int)1;
    public static final int LIBVLC_MEDIA_LIST_PLAYER_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_LIBRARY_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_DISCOVERER_H = (int)1;
    public static abstract class libvlc_callback_t extends Callback<libvlc_callback_t > {
        public abstract void apply(Pointer<LibvlcLibrary.libvlc_event_t > libvlc_event_tPtr1, Pointer<? > voidPtr1);
    };
    public static abstract class libvlc_log_cb extends Callback<libvlc_log_cb > {
        public abstract void apply(Pointer<? > data, int level, Pointer<LibvlcLibrary.vlc_log_t > ctx, Pointer<Byte > fmt, Object... args);
    };
    /** <i>native declaration : line 260</i> */
    public static abstract class libvlc_set_exit_handler_cb_callback extends Callback<libvlc_set_exit_handler_cb_callback > {
        public abstract void apply(Pointer<? > voidPtr1);
    };
    public static abstract class libvlc_media_open_cb extends Callback<libvlc_media_open_cb > {
        public abstract int apply(Pointer<? > opaque, Pointer<Pointer<? > > datap, Pointer<Long > sizep);
    };
    /**
     * Callback prototype to read data from a custom bitstream input media.<br>
     * * \param opaque private pointer as set by the @ref libvlc_media_open_cb<br>
     *               callback<br>
     * \param buf start address of the buffer to read data into<br>
     * \param len bytes length of the buffer<br>
     * * \return strictly positive number of bytes read, 0 on end-of-stream,<br>
     *         or -1 on non-recoverable error<br>
     * * \note If no data is immediately available, then the callback should sleep.<br>
     * \warning The application is responsible for avoiding deadlock situations.<br>
     * In particular, the callback should return an error if playback is stopped;<br>
     * if it does not return, then libvlc_media_player_stop() will never return.<br>
     * <i>native declaration : line 1012</i>
     */
    public static abstract class ssize_t extends Callback<ssize_t > {
        public abstract LibvlcLibrary.ssize_t_callback apply(Pointer<? > libvlc_media_read_cb);
    };
    public static abstract class libvlc_media_seek_cb extends Callback<libvlc_media_seek_cb > {
        public abstract int apply(Pointer<? > opaque, long offset);
    };
    public static abstract class libvlc_media_close_cb extends Callback<libvlc_media_close_cb > {
        public abstract void apply(Pointer<? > opaque);
    };
    public static abstract class ssize_t_callback extends Callback<ssize_t_callback > {
        public abstract int apply(Pointer<? > opaque, Pointer<Byte > buf, @Ptr long len);
    };
    public static abstract class libvlc_video_lock_cb extends Callback<libvlc_video_lock_cb > {
        public abstract Pointer<? > apply(Pointer<? > opaque, Pointer<Pointer<? > > planes);
    };
    public static abstract class libvlc_video_unlock_cb extends Callback<libvlc_video_unlock_cb > {
        public abstract void apply(Pointer<? > opaque, Pointer<? > picture, Pointer<Pointer<? > > planes);
    };
    public static abstract class libvlc_video_display_cb extends Callback<libvlc_video_display_cb > {
        public abstract void apply(Pointer<? > opaque, Pointer<? > picture);
    };
    public static abstract class libvlc_video_format_cb extends Callback<libvlc_video_format_cb > {
        public abstract int apply(Pointer<Pointer<? > > opaque, Pointer<Byte > chroma, Pointer<Integer > width, Pointer<Integer > height, Pointer<Integer > pitches, Pointer<Integer > lines);
    };
    public static abstract class libvlc_video_cleanup_cb extends Callback<libvlc_video_cleanup_cb > {
        public abstract void apply(Pointer<? > opaque);
    };
    public static abstract class libvlc_audio_play_cb extends Callback<libvlc_audio_play_cb > {
        public abstract void apply(Pointer<? > data, Pointer<? > samples, int count, long pts);
    };
    public static abstract class libvlc_audio_pause_cb extends Callback<libvlc_audio_pause_cb > {
        public abstract void apply(Pointer<? > data, long pts);
    };
    public static abstract class libvlc_audio_resume_cb extends Callback<libvlc_audio_resume_cb > {
        public abstract void apply(Pointer<? > data, long pts);
    };
    public static abstract class libvlc_audio_flush_cb extends Callback<libvlc_audio_flush_cb > {
        public abstract void apply(Pointer<? > data, long pts);
    };
    public static abstract class libvlc_audio_drain_cb extends Callback<libvlc_audio_drain_cb > {
        public abstract void apply(Pointer<? > data);
    };
    public static abstract class libvlc_audio_set_volume_cb extends Callback<libvlc_audio_set_volume_cb > {
        public abstract void apply(Pointer<? > data, float volume, boolean mute);
    };
    public static abstract class libvlc_audio_setup_cb extends Callback<libvlc_audio_setup_cb > {
        public abstract int apply(Pointer<Pointer<? > > data, Pointer<Byte > format, Pointer<Integer > rate, Pointer<Integer > channels);
    };
    public static abstract class libvlc_audio_cleanup_cb extends Callback<libvlc_audio_cleanup_cb > {
        public abstract void apply(Pointer<? > data);
    };
    /**
     * A human-readable error message for the last LibVLC error in the calling<br>
     * thread. The resulting string is valid until another error occurs (at least<br>
     * until the next LibVLC call).<br>
     * @warning<br>
     * This will be NULL if there was no error.<br>
     * Original signature : <code>char* libvlc_errmsg()</code><br>
     * <i>native declaration : line 161</i>
     */
    public static native Pointer<Byte > libvlc_errmsg();
    /**
     * Clears the LibVLC error status for the current thread. This is optional.<br>
     * By default, the error status is automatically overridden when a new error<br>
     * occurs, and destroyed when the thread exits.<br>
     * Original signature : <code>void libvlc_clearerr()</code><br>
     * <i>native declaration : line 168</i>
     */
    public static native void libvlc_clearerr();
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param ap the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_vprinterr(const char*, va_list)</code><br>
     * <i>native declaration : line 177</i>
     */
    public static native Pointer<Byte > libvlc_vprinterr(Pointer<Byte > fmt, Object... ap);
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param args the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_printerr(const char*, null)</code><br>
     * <i>native declaration : line 186</i>
     */
    public static native Pointer<Byte > libvlc_printerr(Pointer<Byte > fmt, Object... varArgs1);
    /**
     * Create and initialize a libvlc instance.<br>
     * This functions accept a list of "command line" arguments similar to the<br>
     * main(). These arguments affect the LibVLC instance default configuration.<br>
     * \version<br>
     * Arguments are meant to be passed from the command line to LibVLC, just like<br>
     * VLC media player does. The list of valid arguments depends on the LibVLC<br>
     * version, the operating system and platform, and set of available LibVLC<br>
     * plugins. Invalid or unsupported arguments will cause the function to fail<br>
     * (i.e. return NULL). Also, some arguments may alter the behaviour or<br>
     * otherwise interfere with other LibVLC functions.<br>
     * \warning<br>
     * There is absolutely no warranty or promise of forward, backward and<br>
     * cross-platform compatibility with regards to libvlc_new() arguments.<br>
     * We recommend that you do not use them, other than when debugging.<br>
     * \param argc the number of arguments (should be 0)<br>
     * \param argv list of arguments (should be NULL)<br>
     * \return the libvlc instance or NULL in case of error<br>
     * Original signature : <code>libvlc_instance_t* libvlc_new(int, const const char**)</code><br>
     * <i>native declaration : line 212</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_instance_t > libvlc_new(int argc, Pointer<Pointer<Byte > > argv);
    /**
     * Decrement the reference count of a libvlc instance, and destroy it<br>
     * if it reaches zero.<br>
     * \param p_instance the instance to destroy<br>
     * Original signature : <code>void libvlc_release(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 221</i>
     */
    public static native void libvlc_release(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Increments the reference count of a libvlc instance.<br>
     * The initial reference count is 1 after libvlc_new() returns.<br>
     * \param p_instance the instance to reference<br>
     * Original signature : <code>void libvlc_retain(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 229</i>
     */
    public static native void libvlc_retain(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Try to start a user interface for the libvlc instance.<br>
     * \param p_instance the instance<br>
     * \param name interface name, or NULL for default<br>
     * \return 0 on success, -1 on error.<br>
     * Original signature : <code>int libvlc_add_intf(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 239</i>
     */
    public static native int libvlc_add_intf(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<Byte > name);
